<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:dslv="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/bg_color"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include layout="@layout/layout_title_bar"/>

    <TextView android:textSize="14dp"
        android:textColor="@color/black"
        android:id="@+id/unblog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="20dp"
        android:text="@string/screen_setting"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="@dimen/dp10"
        android:background="@drawable/bg_blog_item"
        android:orientation="vertical">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:paddingStart="2dp"
                android:paddingEnd="12dp">
                <ImageView
                    android:id="@+id/screen_loop_item_image"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:scaleType="fitXY"
                    android:layout_centerVertical="true"
                    android:visibility="gone"
                    />
                <Switch
                    android:id="@+id/screen_loop_item_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:showText="false"
                    android:theme="@style/Widget.SwitchBar.Switch"
                    />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@+id/screen_loop_item_checkbox"
                    android:layout_toRightOf="@+id/screen_loop_item_image"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="10dp">
                    <TextView
                        android:textSize="16dp"
                        android:textColor="@color/black"
                        android:id="@+id/screen_loop_item_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:includeFontPadding="true"
                        android:layout_toRightOf="@+id/screen_loop_item_image"
                        android:text="@string/screen_loop_setting"/>
                    <TextView
                        android:textSize="@dimen/sp_14"
                        android:textColor="@color/black"
                        android:ellipsize="end"
                        android:id="@+id/screen_loop_item_description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/screen_loop_setting_des"
                        android:singleLine="true"/>
                </LinearLayout>
                <View android:id="@+id/screen_loop_divider_line"
                    android:background="#dddddd"
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:layout_alignParentBottom="true"/>
            </RelativeLayout>
        </LinearLayout>


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:paddingStart="2dp"
                android:paddingEnd="12dp">
                <ImageView
                    android:id="@+id/first_screen_item_image"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:scaleType="fitXY"
                    android:layout_centerVertical="true"
                    android:visibility="gone"
                    />

                <Switch
                    android:id="@+id/first_screen_item_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:showText="false"
                    android:theme="@style/Widget.SwitchBar.Switch"
                    />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@+id/first_screen_item_checkbox"
                    android:layout_toRightOf="@+id/first_screen_item_image"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="10dp">
                    <TextView
                        android:textSize="16dp"
                        android:textColor="@color/black"
                        android:id="@+id/first_screen_item_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:includeFontPadding="true"
                        android:layout_toRightOf="@+id/first_screen_item_image"
                        android:text="@string/first_screen_setting"/>
                    <TextView
                        android:textSize="@dimen/sp_14"
                        android:textColor="@color/black"
                        android:ellipsize="end"
                        android:id="@+id/first_screen_item_description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/first_screen_setting_des"
                        android:singleLine="true"/>
                </LinearLayout>
                <View android:id="@+id/first_screen_divider_line"
                    android:background="#dddddd"
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:layout_alignParentBottom="true"/>
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:paddingStart="2dp"
                android:paddingEnd="12dp">
                <ImageView
                    android:id="@+id/first_screen_single_item_image"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:scaleType="fitXY"
                    android:layout_centerVertical="true"
                    android:visibility="gone"
                    />

                <Switch
                    android:id="@+id/first_screen_single_item_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:showText="false"
                    android:theme="@style/Widget.SwitchBar.Switch"
                    />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@+id/first_screen_single_item_checkbox"
                    android:layout_toRightOf="@+id/first_screen_single_item_image"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="10dp">
                    <TextView
                        android:textSize="16dp"
                        android:textColor="@color/black"
                        android:id="@+id/first_screen_single_item_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:includeFontPadding="true"
                        android:layout_toRightOf="@+id/first_screen_single_item_image"
                        android:text="@string/first_screen_single_setting"/>
                    <TextView
                        android:textSize="@dimen/sp_14"
                        android:textColor="@color/black"
                        android:ellipsize="end"
                        android:id="@+id/first_screen_single_item_description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/first_screen_single_setting_des"
                        android:singleLine="true"/>
                </LinearLayout>
                <View android:id="@+id/first_screen_single_divider_line"
                    android:background="#dddddd"
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:layout_alignParentBottom="true"/>
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

    <TextView android:textSize="14dp"
        android:textColor="@color/black"
        android:id="@+id/more_setting_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="20dp"
        android:text="@string/more_setting_title"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="@dimen/dp10"
        android:background="@drawable/bg_blog_item"
        android:orientation="vertical">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:paddingStart="2dp"
                android:paddingEnd="12dp">
                <ImageView
                    android:id="@+id/launcher_layout_item_image"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:scaleType="fitXY"
                    android:layout_centerVertical="true"
                    android:visibility="gone"
                    />
                <Switch
                    android:id="@+id/launcher_layout_item_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:showText="false"
                    android:theme="@style/Widget.SwitchBar.Switch"
                    />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@+id/launcher_layout_item_checkbox"
                    android:layout_toRightOf="@+id/launcher_layout_item_image"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="10dp">
                    <TextView
                        android:textSize="16dp"
                        android:textColor="@color/black"
                        android:id="@+id/launcher_layout_item_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:includeFontPadding="true"
                        android:layout_toRightOf="@+id/launcher_layout_item_image"
                        android:text="@string/launcher_layout_setting"/>
                    <TextView
                        android:textSize="@dimen/sp_14"
                        android:textColor="@color/black"
                        android:ellipsize="end"
                        android:id="@+id/launcher_layout_item_description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:singleLine="true"/>
                </LinearLayout>
                <View android:id="@+id/launcher_layout_divider_line"
                    android:background="#dddddd"
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:layout_alignParentBottom="true"/>
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>